--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
 test
+<!doctype html>
+<html>
+
+	<head>
+		<title></title>
+		<link rel="stylesheet" type="text/css" href="css/reset_plus.css">
+		<link rel="stylesheet" type="text/css" href="css/mijn.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
+    <script src="js/script.js" defer></script>
+		<meta charset="utf-8">
+	</head>
+
+	<body>
+
+    <div class="kader">
+          <div class="pixel">
+
+          </div>
+
+          <div class="oprah">
+
+          </div>
+
+          <div class="bezos">
+                <p>The Richest Man In History</p>
+                <div href="#" class="button"> $ Enter His Imperium $ </div>
+          </div>
+
+
+    </div>
+
+  </body>
+
+  </html>
