Adding Madonna and Oprah

--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
           <div class="pixel">
 
           </div>
+					<div class="madonna onzichtbaar">
+						  <a href="#!" class="button"> The Richest Pop Star </a>
+					</div>
 
           <div class="oprah">
-
+               <a href="#!" class="button"> The Richest Black Woman </a>
           </div>
 
           <div class="bezos">
                 <p>The Richest Man In History</p>
-                <div href="#" class="button"> $ Enter His Imperium $ </div>
+
+								<a href="#!" class="button"> $ Enter His Imperium $ </a>
           </div>
 
 
