--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <div class="pixel">
 
           </div>
+					<a href="#!" class="zoomin onzichtbaar"></a>
 					<div class="madonna onzichtbaar">
 						  <a href="#!" class="button"> The Richest Pop Star </a>
 					</div>
