--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 
 
     <div class="kader">
-          <div class="pixel">
+          <div class="pixel"></div>
 
-          </div>
+					<div class="average">
+
+					</div>
+
 					<a href="#!" class="zoomin onzichtbaar"></a>
+
 					<div class="madonna onzichtbaar">
 						  <a href="#!" class="button"> The Richest Pop Star </a>
 					</div>
