--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <div class="kader">
           <div class="pixel"></div>
 
-					<div class="average">
-
+					<div class="average onzichtbaar">
+						<p class="avgeu">Average European net worth </br> 174 836 USD</p>
+						<a href="#!" class="button avgeu"> ZOOM OUT </a>
 					</div>
 
 					<a href="#!" class="zoomin onzichtbaar"></a>
