--- a/index.html
+++ b/index.html
@@ -20,9 +20,18 @@
           <div class="pixel"></div>
 
 					<div class="average onzichtbaar">
-						<p class="avgeu">Average European net worth </br> 174 836 USD</p>
-						<a href="#!" class="button avgeu"> ZOOM OUT </a>
+								<div class="hoverAverage">
+
+								</div>
+								<p class="avgeu paraOne">Average European net worth </br> 174 836 USD</p>
+								<p class="avgeu paraTwo">Median European net worth </br> 26 423 USD</p>
+								<p class="avgeu paraThree">Median African net worth </br> 1068 USD</p>
+								<a href="#!" class="button avgeu"> ZOOM OUT </a>
+								<a href="#!" class="" id="medianEuHover"></a>
+								<a href="#!" class=" onzichtbaar" id="medianAfHover"></a>
+
 					</div>
+
 
 					<a href="#!" class="zoomin onzichtbaar"></a>
 
