--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
           <div class="pixel"></div>
 
 					<div class="average onzichtbaar">
-								<div class="hoverAverage">
+								<div class="hoverAverageOne">
+
+								</div>
+								<div class="hoverAverageTwo">
 
 								</div>
 								<p class="avgeu paraOne">Average European net worth </br> 174 836 USD</p>
