bijschrift Med Afr

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								</div>
 								<p class="avgeu paraOne">Average European net worth </br> 174 836 USD</p>
 								<p class="avgeu paraTwo">Median European net worth </br> 26 423 USD</p>
-								<p class="avgeu paraThree">Median African net worth </br> 1068 USD</p>
+								<p class="avgeu paraThree">Median African net worth </br> 1068 USD </br><span>Our collonial past is still very presant...</span></p>
 								<a href="#!" class="button avgeu"> ZOOM OUT </a>
 								<a href="#!" class="" id="medianEuHover"></a>
 								<a href="#!" class=" onzichtbaar" id="medianAfHover"></a>
